--- a/arch/scripts/README
+++ b/arch/scripts/README
@@ -1,3 +1,4 @@
+DWM:
 mkdir -p ~/.scripts/dwm
 curl https://raw.githubusercontent.com/05e/dotfiles/main/arch/scripts/dwm/menubar > ~/.scripts/dwm/menubar
 curl https://raw.githubusercontent.com/05e/dotfiles/main/arch/scripts/dwm/start > ~/.scripts/dwm/start
