--- a/linux/install
+++ b/linux/install
@@ -5,9 +5,9 @@ touch ~/.hushlogin
 
 # install dependencies
 echo -e "\033[92m --=* Installing dependencies *=--\033[37m"
-yay -S alacritty discord firefox keepass syncthing \
+yay -S alacritty discord firefox keepass syncthing spotify \
        bspwm picom polybar sxhkd i3lock ranger \
-       light xss-lock \
+       light xss-lock zscroll \
        ttf-font-awesome ttf-cmu-typewriter ttf-jetbrains-mono ttf-twemoji ttf-jetbrains-mono-nerd \
        neofetch btop mpd \
        yarn python python-neovim nodejs fd ripgrep
